Initial changes to Simulated-Annealing-2 to do column-based placement (Bug #2977)
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@12624 b64ed6c1-75a8-e629-b1da-d0dae74a743a